--- a/src/styles/variables-custom.less
+++ b/src/styles/variables-custom.less
@@ -1,29 +1,34 @@
 /* init */
-@blue-1: #0c63fa;
-@blue-2: rgba(0, 104, 255, 65%);
-@blue-3: rgba(89, 157, 255, 35%);
-@blue-4: #005ade;
-@blue-5: rgba(25, 128, 255, 10%);
-@blue-6: #e8f2ff;
+@blue-1: #8e44ad; // Primary purple
+@blue-2: rgba(142, 68, 173, 65%); // Purple with transparency
+@blue-3: rgba(155, 89, 182, 35%); // Lighter purple
+@blue-4: #7d3c98; // Darker purple for hover
+@blue-5: rgba(155, 89, 182, 10%); // Very light purple
+@blue-6: #f3e5f5; // Light purple background
 @primary-color: @blue-1;
 @info-color: @blue-2;
 @hover-color: @blue-4;
-@heading-color: rgba(0, 0, 0, 65%);
+@heading-color: rgba(
+  0,
+  0,
+  0,
+  65%
+); // Keeping the heading color black for contrast
 
-@green-1: #57e39b;
+@green-1: #57e39b; // Keeping the same green for success
 @green-2: rgba(87, 227, 155, 65%);
 @green-3: rgba(87, 227, 155, 35%);
 @success-color: @green-1;
 
-@yellow-1: #fedf40;
+@yellow-1: #fedf40; // Keeping the same yellow for warnings
 @yellow-2: rgba(254, 223, 64, 65%);
 @yellow-3: rgba(254, 223, 64, 35%);
 @warn-color: @yellow-1;
 
-@warn-light-color: #f6b23d;
+@warn-light-color: #f6b23d; // Slightly modern orange
 @warn-dark-color: #fa8c16;
 
-@red-1: #eb354d;
+@red-1: #eb354d; // Keeping the same red for errors
 @red-2: rgba(235, 53, 77, 65%);
 @red-3: rgba(235, 53, 77, 35%);
 @error-color: @red-1;
@@ -31,7 +36,7 @@
 @danger-color-hover: #f76070;
 @red: @red-color03;
 
-@gray-1: #d2d2d2;
+@gray-1: #d2d2d2; // Keeping grays for neutral backgrounds
 @gray-2: #f2f2f2;
 @gray-3: #fafafa;
 @gray-4: #f0f1f7;
@@ -59,7 +64,7 @@
 @dark-color04: #4a5974;
 @dark-color05: #404e68;
 @dark-color06: #36435c;
-@dark-color07: #124191;
+@dark-color07: #7d3c98; // Dark purple for dark color palette
 @dark-color08: #181d28;
 @dark-color09: rgba(0, 0, 0, 30%);
 @dark-color10: rgba(0, 0, 0, 50%);
@@ -74,7 +79,7 @@
 @light-color05: #d1d7df;
 @light-color06: #ccd3db;
 @light-color07: #c1c9d1;
-@light-color08: #abb4be;
+@light-color08: #e1bee7; // Light purple for light color palette
 
 @green-color01: #c4e6d4;
 @green-color02: #a2d8bb;
@@ -82,11 +87,11 @@
 @green-color04: #479e88;
 @green-color05: #3b747a;
 
-@blue-color01: #c7deef;
-@blue-color02: #7eb8dc;
-@blue-color03: #329dce;
-@blue-color04: #3385b0;
-@blue-color05: #326e93;
+@blue-color01: #d1c4e9; // Lightest purple
+@blue-color02: #b39ddb; // Lighter purple
+@blue-color03: #7e57c2; // Purple for blue scale
+@blue-color04: #673ab7;
+@blue-color05: #512da8;
 
 @red-color01: #fae7e5;
 @red-color02: #ea8573;
@@ -104,7 +109,7 @@
 
 @white: #fff;
 @black: #000;
-@blue-color: #124191;
+@blue-color: #7d3c98; // Primary dark purple for blue-color reference
 
 /* specific color */
 @dark: @dark-color07;
