--- a/src/layouts/Auth/index.less
+++ b/src/layouts/Auth/index.less
@@ -4,12 +4,16 @@
   flex-flow: row;
   height: 100vh;
   overflow: hidden;
-  background-color: #fff;
 
   .left {
-    position: relative;
-    width: 576px;
-    overflow-y: auto;
+    position: absolute;
+    right: 4%;
+    top: 50%;
+    background-color: #fff;
+    transform: translateY(-60%);
+    z-index: 999;
+    width: 524px;
+    border-radius: 8px;
 
     /* TODO wait for RGB
     // background: rgb(253, 249, 252) no-repeat fixed left bottom;
@@ -21,21 +25,30 @@
       right: 24px;
       width: 20px;
       height: 20px;
-      text-align: right;
+      text-align: center;
     }
 
     .main {
       margin-top: 10vh;
+      margin-bottom: 10vh;
       padding: 0 130px;
 
       .top {
         text-align: center;
 
         .header {
-          height: 56px;
-          line-height: 56px;
-          text-align: left;
-
+          text-align: center;
+          font-size: 58px;
+          background: rgb(1, 0, 84);
+          background: linear-gradient(
+            90deg,
+            rgba(1, 0, 84, 1) 0%,
+            rgba(100, 9, 126, 1) 17%,
+            rgba(100, 9, 121, 1) 25%,
+            rgba(104, 0, 255, 1) 100%
+          );
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
           a {
             text-decoration: none;
           }
@@ -66,6 +79,7 @@
 .login-full-image {
   width: 100%;
   height: 100%;
+  background: center;
 }
 
 .full-image-front {
