--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -104,10 +104,7 @@
 @btn-primary-shadow: none;
 
 /*  font */
-@font-family: 'Helvetica Neue', 'Alibaba PuHuiTi Regular', 'Alibaba PuHuiTi',
-  'PingFang SC', 'Lantinghei SC', helvetica, arial, 'Microsoft YaHei',
-  '微软雅黑', 'STHeitiSC-Light', 'simsun', '宋体', 'WenQuanYi Zen Hei',
-  'WenQuanYi Micro Hei', sans-serif;
+@font-family: 'Roboto', sans-serif;
 @font-family-id: @font-family;
 @size-small: 12px;
 @size-normal: 14px;
